--- a/CanamDistributors.csproj
+++ b/CanamDistributors.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="EFCore.BulkExtensions" Version="8.1.1" />
+    <PackageReference Include="EPPlus" Version="7.3.2" />
     <PackageReference Include="IppDotNetSdkForQuickBooksApiV3" Version="14.6.4" />
     <PackageReference Include="itext7" Version="8.0.5" />
     <PackageReference Include="itext7.bouncy-castle-adapter" Version="8.0.5" />
@@ -15,6 +16,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
+    <PackageReference Include="NPOI" Version="2.7.1" />
     <PackageReference Include="RestSharp" Version="112.0.0" />
   </ItemGroup>
 
