--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=SQL5106.site4now.net;Database=db_aaddeb_canamadmin; User Id=db_aaddeb_canamadmin_admin;Password=Groot@0341"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
